--- a/index.html
+++ b/index.html
@@ -283,8 +283,7 @@
                 the statistics. If you wish to download the usage statistics, click the <strong>Download Usage
                     CSV</strong> button. For citation data, use the <strong>Download Citation Data</strong> button
                 available for each dataset.</p>
-            <p>While the statistics are being fetched, a loading bar will appear. Please wait until the process is
-                complete. The statistics for each dataset will be displayed in collapsible sections; click on the
+            <p>While the statistics are being fetched, a loading bar will appear. The statistics for each dataset will be displayed in collapsible sections; click on the
                 section headers to expand or collapse the details. Additionally, a chart will show the download trends
                 over time for the selected datasets.</p>
             <p>Enjoy using the tool! If you need help, contact Aidan Houlihan ah3789@drexel.edu.</p>
