--- a/index.html
+++ b/index.html
@@ -283,9 +283,13 @@
                 the statistics. If you wish to download the usage statistics, click the <strong>Download Usage
                     CSV</strong> button. For citation data, use the <strong>Download Citation Data</strong> button
                 available for each dataset.</p>
-            <p>While the statistics are being fetched, a loading bar will appear. The statistics for each dataset will be displayed in collapsible sections; click on the
-                section headers to expand or collapse the details. Additionally, a chart will show the download trends
-                over time for the selected datasets.</p>
+            <p>While the statistics are being fetched, a loading bar will appear. The statistics for each dataset will
+                be displayed in collapsible sections; click on the
+                section headers to expand or collapse the details. Citations by year are at the end of each section.
+                <strong>Click the link</strong> to vist the GBIF page for those citations.
+            </p>
+            Additionally, a chart will show the download trends
+            over time for the selected datasets.</p>
             <p>Enjoy using the tool! If you need help, contact Aidan Houlihan ah3789@drexel.edu.</p>
         </div><br>
         <div class="date-input-container">
@@ -442,15 +446,29 @@
         }
 
         async function getCitationStatistics(datasetUUID, yearRange) {
-            const url = `https://api.gbif.org/v1/literature/search?gbifDatasetKey=${datasetUUID}&year=${yearRange}`;
-            const response = await fetch(url);
-            if (response.ok) {
-                const data = await response.json();
-                return data.count; // Return the number of citations
+            console.log(datasetUUID);
+            if (datasetUUID === 'Entomology') {
+                const url = `https://api.gbif.org/v1/literature/search?gbifDatasetKey=0475db1b-e6f9-4418-9248-845e64047da8&gbifDatasetKey=20524cf7-66f8-49d2-a274-102e1090e502&year=${yearRange}&limit=0`;
+                const response = await fetch(url);
+                if (response.ok) {
+                    const data = await response.json();
+                    return data.count; // Return the number of citations
+                } else {
+                    console.error(`Error fetching citations for dataset ${datasetUUID}: ${response.status}`);
+                    return 0; // Return 0 if there's an error
+                }
             } else {
-                console.error(`Error fetching citations for dataset ${datasetUUID}: ${response.status}`);
-                return 0; // Return 0 if there's an error
+                const url = `https://api.gbif.org/v1/literature/search?gbifDatasetKey=${datasetUUID}&year=${yearRange}&limit=0`;
+                const response = await fetch(url);
+                if (response.ok) {
+                    const data = await response.json();
+                    return data.count; // Return the number of citations
+                } else {
+                    console.error(`Error fetching citations for dataset ${datasetUUID}: ${response.status}`);
+                    return 0; // Return 0 if there's an error
+                }
             }
+
         }
 
         async function fetchStatistics(startDate, endDate, selectedDatasets) {
@@ -492,11 +510,20 @@
                 for (let year = startYear; year <= endYear; year++) {
                     let combinedCitationCount = 0;
                     for (const datasetUUID of datasetUUIDsList) {
-                        const citationCount = await getCitationStatistics(datasetUUID, year);
-                        combinedCitationCount += citationCount;
+                        console.log(datasetName);
+                        if (datasetName === "Entomology") {
+                            combinedCitationCount = await getCitationStatistics('Entomology', year);
+                        }
+                        else {
+                            console.log(datasetUUID);
+                            const citationCount = await getCitationStatistics(datasetUUID, year);
+                            console.log(citationCount)
+                            combinedCitationCount += citationCount;
+                        }
                     }
                     // Assign the citation count to all relevant stats
                     for (const stats of allStatistics) {
+                        //console.log(stats);
                         if (stats.dataset_name === datasetName && stats.year === year) {
                             stats.citationCount = combinedCitationCount;
                         }
@@ -589,27 +616,39 @@
             const startDate = document.getElementById('start-date').value;
             const endDate = document.getElementById('end-date').value;
             const selectedDatasets = Object.keys(datasetVars).filter(dataset => datasetVars[dataset].checked);
+
             if (!startDate || !endDate) {
                 alert("Please enter both start and end dates.");
                 return;
             }
+
             // Validate that the end date is after the start date
             if (new Date(endDate) <= new Date(startDate)) {
                 alert("The end date must be after the start date.");
                 return;
             }
+
             if (selectedDatasets.length === 0) {
                 alert("Please select at least one dataset.");
                 return;
             }
+
             await fetchStatistics(startDate, endDate, selectedDatasets);
+
             const output = document.getElementById('output');
+
             output.innerHTML = ''; // Clear previous output
+
             for (const datasetName of selectedDatasets) {
+
+                const datasetUUIDsList = Array.isArray(datasetUUIDs[datasetName]) ? datasetUUIDs[datasetName] : [datasetUUIDs[datasetName]];
+
                 // Create collapsible button
                 const collapsibleButton = document.createElement('button');
+
                 collapsibleButton.className = 'collapsible';
                 collapsibleButton.textContent = `${datasetName} Download Usage - Click to Expand`;
+
                 output.appendChild(collapsibleButton);
 
                 // Create content div
@@ -619,9 +658,12 @@
                 // Create table for statistics
                 const table = document.createElement('table');
                 table.className = 'table';
+
                 const thead = document.createElement('thead');
                 const tbody = document.createElement('tbody');
+
                 thead.innerHTML = `<tr><th>Year</th><th>Month</th><th>Total Records</th><th>Number of Downloads</th></tr>`;
+
                 for (const stats of allStatistics) {
                     if (stats.dataset_name === datasetName) {
                         const row = document.createElement('tr');
@@ -629,6 +671,7 @@
                         tbody.appendChild(row);
                     }
                 }
+
                 table.appendChild(thead);
                 table.appendChild(tbody);
                 contentDiv.appendChild(table);
@@ -636,17 +679,34 @@
                 // Create table for citation stats
                 const citationTable = document.createElement('table');
                 citationTable.className = 'table';
+
                 const citationThead = document.createElement('thead');
                 const citationTbody = document.createElement('tbody');
+
                 citationThead.innerHTML = `<tr><th>Year</th><th>Citations</th></tr>`;
+
                 const startYear = new Date(startDate).getFullYear() + 1;
                 const endYear = new Date(endDate).getFullYear();
+
                 for (let year = startYear; year <= endYear; year++) {
                     const row = document.createElement('tr');
+
                     const citationCount = allStatistics.find(stats => stats.dataset_name === datasetName && stats.year === year)?.citationCount || 0;
-                    row.innerHTML = `<td>${year}</td><td>${citationCount}</td>`;
-                    citationTbody.appendChild(row);
+
+                    if (allStatistics.find(stats => stats.dataset_name === datasetName && stats.year === year)?.dataset_name === "Entomology") {
+
+                        row.innerHTML = `<td>${year}</td><td><a href="https://www.gbif.org/resource/search?contentType=literature&year=${year}&gbifDatasetKey=0475db1b-e6f9-4418-9248-845e64047da8&gbifDatasetKey=20524cf7-66f8-49d2-a274-102e1090e502"target="_blank">${citationCount}</a></td>`;
+                        citationTbody.appendChild(row);
+                    }
+
+                    else {
+                        const datasetUUID = (allStatistics.find(stats => stats.dataset_name === datasetName && stats.year === year)?.datasetKey);
+
+                        row.innerHTML = `<td>${year}</td><td><a href="https://www.gbif.org/resource/search?contentType=literature&year=${year}&gbifDatasetKey=${datasetUUID}"target="_blank">${citationCount}</a></td>`;
+                        citationTbody.appendChild(row);
+                    }
                 }
+
                 citationTable.appendChild(citationThead);
                 citationTable.appendChild(citationTbody);
                 contentDiv.appendChild(citationTable);
