--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         </div>
     </div>
     <div class="footer">
-        Created by Aidan Houlihan (ah3789@drexel.edu) for ANSP, 2024
+        Created by Aidan Houlihan (ah3789@drexel.edu)
     </div>
 
     <script>
